[package]
name = "mach-dxcompiler-rs"
description = """
Prebuilt, statically-linked DXC.
"""
version = "0.1.3+2024.11.22-df583a3.1"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/DouglasDwyer/mach-dxcompiler-rs"

[build-dependencies]
bindgen = { version = "0.71.1", optional = true, default-features = false, features = [ "runtime" ] }

[target.'cfg(target_env = "msvc")'.build-dependencies]
cc = { version = "1.2.3", optional = true }

[features]
default = ["msvc_version_validation"]
cbindings = ["dep:bindgen"]
msvc_version_validation = ["dep:cc"]


[package.metadata."docs.rs"]
all-features = true
